--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
 }
 
+
 dependencies {
   compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
-
+  implementation 'javax.servlet:jstl:1.2'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
